data/derived/comb/progs/unify/prog4303.ml.out
Characters 32-54:
  let rec fixpoint (f,b) = wwhile((fixpoint(f, f b),f b), b);;
                                  ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
